--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -59,3 +59,17 @@ section[epub|type~="dedication"] > *{
 	}
 }
 /* End centered dedications */
+
+/* Custom dedication */
+section[epub|type~="dedication"] b{
+	text-transform: uppercase;
+}
+
+section[epub|type~="dedication"] b:first-of-type{
+	font-style: italic;
+	text-transform: none;
+}
+
+section[epub|type~="dedication"] p{
+	text-indent: initial;
+}
