Fix poetry indentation

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -31,6 +31,16 @@ p span.i1{
 	text-indent: -1em;
 }
 
+p span.i2{
+	padding-left: 3em;
+	text-indent: -1em;
+}
+
+p span.i3{
+	padding-left: 4em;
+	text-indent: -1em;
+}
+
 /* Centered dedications */
 section[epub|type~="dedication"]{
 	text-align: center;
